--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,6 +1,6 @@
 @import "./blocks/carusel.scss";
-@import "./blocks/main.scss";
+/*@import "./blocks/main.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/blog.scss";
-@import "./blocks/footer.scss"
+@import "./blocks/footer.scss"*/
