--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,4 +3,4 @@
 @import "./blocks/navigation.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/blog.scss";
-@import "./blocks/footer.scss"
+@import "./blocks/footer.scss";
