--- a/source/css/style.css
+++ b/source/css/style.css
@@ -46,6 +46,7 @@
   padding: 0 6px;
   font-size: 22px;
   line-height: 22px;
+  font-style: italic;
   letter-spacing: 1px;
   vertical-align: middle;
   background-color: rgba(255, 255, 255, 0.6);
@@ -60,6 +61,7 @@
   height: 38px;
   font-size: 14px;
   line-height: 14px;
+  font-style: italic;
   background-color: #000000;
   color: white;
 }
@@ -170,6 +172,7 @@
   .carusel-item__title {
     font-size: 18px;
     line-height: 18px;
+    font-style: italic;
   }
   .carusel-item__text {
     display: block;
@@ -190,10 +193,18 @@
   font-style: italic;
 }
 
+.page-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 @media (min-width:992px) {
   .page-wrapper {
-    margin: 50px auto 0 auto;
-    max-width: 896px;
+    margin-top: 50px;
+    width: 896px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -207,8 +218,7 @@
 }
 @media (min-width:1178px) {
   .page-wrapper {
-    margin: 50px auto 0 auto;
-    max-width: 1080px;
+    width: 1080px;
   }
 
   .left-column {
@@ -379,10 +389,12 @@
     color: #34ACA7;
     font-size: 10px;
     line-height: 12px;
+    font-style: italic;
   }
   .navigation-text {
     font-size: 10px;
     line-height: 19px;
+    font-style: italic;
     margin-bottom: 15px;
   }
 
@@ -563,9 +575,9 @@
 .blog-item__title {
   font-size: 22px;
   line-height: 21px;
-  color: #34ACA7;
   font-style: normal;
   margin-bottom: 25px;
+  color: #34ACA7;
   letter-spacing: -0.4px;
 }
 .blog-item__description {
@@ -692,9 +704,17 @@
   font-style: italic;
 }
 
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
 .footer-wrapper {
-  border-top: 1px solid #E5E5E5;
   max-width: 429px;
+  border-top: 1px solid #E5E5E5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -714,9 +734,9 @@
 .copyright-item__link {
   text-decoration: none;
   color: #34ACA7;
-  font-style: normal;
   font-size: 12px;
   line-height: 12px;
+  font-style: normal;
 }
 .copyright-item__separator {
   color: #E5E5E5;
