--- a/source/css/style.css
+++ b/source/css/style.css
@@ -23,10 +23,10 @@
   display: none;
 }
 .carusel-image {
+  position: relative;
   width: 100%;
   height: 373px;
   margin: 0 auto;
-  background: url(../../img/baner.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -35,6 +35,7 @@
   justify-content: end;
   align-items: normal;
   flex-wrap: wrap;
+  display: none;
 }
 .carusel-title {
   display: flex;
@@ -64,6 +65,41 @@
   font-style: italic;
   background-color: #000000;
   color: white;
+}
+.carusel-wrapper {
+  position: relative;
+}
+.carusel-btn {
+  position: absolute;
+  width: 90%;
+  height: 40px;
+  left: 5%;
+  top: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: no-wrap;
+}
+.carusel-btn__item {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border: none;
+  border-radius: 50%;
+  color: #34ACA7;
+  font-size: 30px;
+}
+.carusel-btn__item:hover {
+  background-color: #EFF8F7;
+}
+
+.carusel-image.active {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: normal;
+  flex-wrap: wrap;
 }
 
 @media (min-width:480px) {
@@ -104,6 +140,9 @@
   .carusel-title {
     padding: 0 10px 0 20px;
   }
+  .carusel-btn {
+    display: none;
+  }
 
   /* размеры для блоков blog & subscribe*/
   /* для флексбоксов*/
@@ -132,6 +171,9 @@
     align-items: center;
     flex-wrap: wrap;
     box-sizing: border-box;
+  }
+  .carusel-item:hover {
+    cursor: pointer;
   }
   .carusel-item__active {
     background-color: #D9EFEC;
