--- a/source/scss/blocks/carusel.scss
+++ b/source/scss/blocks/carusel.scss
@@ -9,14 +9,15 @@
         display: none;
     }
     &-image{
+        position: relative;
         width: 100%;
         height: 373px;
         margin: 0 auto;
-        background: url(../../img/baner.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
         @include flex (flex, column, end, normal, wrap);
+        display: none;
     }
     &-title{
         @include flex (flex, row, normal, center, wrap);
@@ -35,6 +36,32 @@
         background-color: $black;
         color: white;
     }
+    &-wrapper{
+        position: relative;
+    }
+    &-btn{
+        position: absolute;
+        width: 90%;
+        height: 40px;
+        left: 5%;
+        top: 50%;
+        @include flex (flex, row, space-between, center, no-wrap);
+        &__item{
+            width: 40px;
+            height: 40px;
+            background-color: white;
+            border: none;
+            border-radius: 50%;
+            color: $primary;
+            font-size: 30px;
+            &:hover{
+                background-color: $light;
+            }
+        }
+    }
+}
+.carusel-image.active{
+    @include flex (flex, column, end, normal, wrap);
 }
 
 @include response('mobile'){
@@ -72,6 +99,9 @@
         &-title{
             padding: 0 10px 0 20px;
         }
+        &-btn{
+            display: none;
+        }
     }
     @import "./mixin.scss";
     .carusel{
@@ -86,7 +116,9 @@
             color: $primary;
             @include flex (flex, row, center, center, wrap);
             box-sizing: border-box;
-
+            &:hover{
+                cursor: pointer;
+            }
             &__active{
                 background-color: $light-active;
             }
